tests/correctness/reject/parse_no_fn_body.keel
def f(x: int); int:
def main(sys: System); Io:
    println(f(1))
